--- a/Assignment0/main.css
+++ b/Assignment0/main.css
@@ -13,5 +13,8 @@ h1 {
   font-size: 350%;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
   
-  
+}
+
+p {
+     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
